<resources>
    <string name="app_name">Spottrack</string>
    <string name="loginBtn">Log in with Spotify</string>
    <string name="title_activity_overview">OverviewActivity</string>
    <string name="overview">Overview</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>

    <string name="coverDesc">Playlist cover image</string>
    <string name="sample_playlist_title">This is a sample Playlist</string>
    <string name="sample_track_title">This is a sample track title</string>
    <string name="track_duration">03:42</string>
    <string name="sample_owner">Gerpo</string>
    <string name="subscribed">Subscribed</string>


    <string name="confirm_untracking">Sure you don\'t want to track the progress anymore?</string>
    <string name="confirm">Yes, remove!</string>
    <string name="cancel">Cancel</string>


</resources>
